--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Simple Todo App</title>
+  <title>TaskNest — Smart Todo App</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -13,7 +13,7 @@
   <main class="container">
     <header class="header">
       <div class="titleRow">
-        <h1>Todo</h1>
+        <h1>TaskNest</h1>
         <button id="themeToggle" class="themeToggle" type="button" aria-pressed="false" aria-label="Toggle theme">
           <span class="themeIcon" aria-hidden="true">◐</span>
           <span class="themeText">Light</span>
