--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <section class="card">
       <form id="todoForm" class="form">
         <input id="todoInput" type="text" placeholder="Add a task…" autocomplete="off" />
-        <button type="submit">Add</button>
+        <button type="submit" class="addBtn">Add</button>
       </form>
 
       <div class="toolbar">
